chore(deps): bump the kubernetes group
- k8s.io/autoscaler/vertical-pod-autoscaler from 1.6.0 to 1.7.0
- k8s.io/gengo/v2 from 2.0.0-20251215205346-5ee0d033ba5b to 2.0.0-20260408192533-25e2208e0dc3
- k8s.io/kube-openapi from 0.0.0-20260319004828-5883c5ee87b9 to 0.0.0-20260414162039-ec9c827d403f

Regenerated models: VPA 1.7.0 API additions (startupBoost, InPlace
update mode, memoryAggregationIntervalSeconds, evictAfterOOMThreshold,
observedGeneration) plus inline-embed fields newly surfaced by the
gengo/kube-openapi bump (tekton *Ref resolver/params, knative duck
v1alpha1 Addressable CACerts/name/url, openshift HubSourceStatus
disabled/name). All changes are additive.

Closes #7885
