# kubernetes-model-generator/openapi/schemas/io.k8s.autoscaling.json
@@ -34,6 +34,16 @@
             "$ref": "#/definitions/io.k8s.apimachinery.pkg.api.resource.Quantity"
           }
         },
+        "memoryAggregationIntervalCount": {
+          "description": "memoryAggregationIntervalCount is the number of consecutive memoryAggregationIntervals which make up the memory aggregation window. The total window length is: MemoryAggregationIntervalSeconds * MemoryAggregationIntervalCount.",
+          "type": "integer",
+          "format": "int64"
+        },
+        "memoryAggregationIntervalSeconds": {
+          "description": "memoryAggregationIntervalSeconds is the length of a single interval (in seconds) for which the peak memory usage is computed. Memory usage peaks are aggregated in multiples of this interval. In other words, there is one memory usage sample per interval (the maximum usage over that interval).",
+          "type": "integer",
+          "format": "int32"
+        },
         "minAllowed": {
           "description": "Specifies the minimal amount of resources that will be recommended for the container. The default is no minimum.",
           "type": "object",
@@ -52,6 +62,10 @@
         "oomMinBumpUp": {
           "description": "oomMinBumpUp is the minimum increase in memory when OOM is detected.",
           "$ref": "#/definitions/io.k8s.apimachinery.pkg.api.resource.Quantity"
+        },
+        "startupBoost": {
+          "description": "startupBoost specifies the startup boost policy for the container. This overrides any pod-level startup boost policy. The startup boost policy takes precedence over the rest of the fields in this struct, except for ContainerName and ControlledValues.",
+          "$ref": "#/definitions/io.k8s.autoscaling.v1.StartupBoost"
         }
       },
       "x-fabric8-info": {
@@ -90,6 +104,51 @@
         "Kind": "EvictionRequirement",
         "Scope": "Namespaced"
       }
+    },
+    "io.k8s.autoscaling.v1.GenericStartupBoost": {
+      "description": "GenericStartupBoost defines the startup boost policy for a resource.",
+      "type": "object",
+      "required": [
+        "type"
+      ],
+      "properties": {
+        "durationSeconds": {
+          "description": "durationSeconds indicates for how long to keep the pod boosted after it goes to Ready. Defaults to 0.",
+          "type": "integer",
+          "format": "int32"
+        },
+        "factor": {
+          "description": "factor specifies the factor to apply to the resource request. This field is required when Type is \"Factor\".",
+          "type": "integer",
+          "format": "int32"
+        },
+        "quantity": {
+          "description": "quantity specifies the absolute resource quantity to be used as the resource request and limit during the boost phase. This field is required when Type is \"Quantity\".",
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.api.resource.Quantity"
+        },
+        "type": {
+          "description": "type specifies the kind of boost to apply. Supported values are: \"Factor\", \"Quantity\". No startupboost will be applied for unrecognized values.",
+          "type": "string",
+          "default": ""
+        }
+      },
+      "x-fabric8-info": {
+        "Type": "nested",
+        "Group": "autoscaling.k8s.io",
+        "Version": "v1",
+        "Kind": "GenericStartupBoost",
+        "Scope": "Namespaced"
+      },
+      "x-kubernetes-unions": [
+        {
+          "discriminator": "type",
+          "fields-to-discriminateBy": {
+            "durationSeconds": "DurationSeconds",
+            "factor": "Factor",
+            "quantity": "Quantity"
+          }
+        }
+      ]
     },
     "io.k8s.autoscaling.v1.HistogramCheckpoint": {
       "description": "HistogramCheckpoint contains data needed to reconstruct the histogram.",
@@ -149,6 +208,11 @@
       "description": "PodUpdatePolicy describes the rules on how changes are applied to the pods.",
       "type": "object",
       "properties": {
+        "evictAfterOOMSeconds": {
+          "description": "evictAfterOOMSeconds specifies the time in seconds to wait after an OOM event before considering the pod for eviction. Pods that have OOMed in less than this time since start will be evicted.",
+          "type": "integer",
+          "format": "int32"
+        },
         "evictionRequirements": {
           "description": "EvictionRequirements is a list of EvictionRequirements that need to evaluate to true in order for a Pod to be evicted. If more than one EvictionRequirement is specified, all of them need to be fulfilled to allow eviction.",
           "type": "array",
@@ -240,6 +304,23 @@
         "Group": "autoscaling.k8s.io",
         "Version": "v1",
         "Kind": "RecommendedPodResources",
+        "Scope": "Namespaced"
+      }
+    },
+    "io.k8s.autoscaling.v1.StartupBoost": {
+      "description": "StartupBoost defines the startup boost policy.",
+      "type": "object",
+      "properties": {
+        "cpu": {
+          "description": "cpu specifies the CPU startup boost policy. If this field is not set, no startup boost is applied.",
+          "$ref": "#/definitions/io.k8s.autoscaling.v1.GenericStartupBoost"
+        }
+      },
+      "x-fabric8-info": {
+        "Type": "nested",
+        "Group": "autoscaling.k8s.io",
+        "Version": "v1",
+        "Kind": "StartupBoost",
         "Scope": "Namespaced"
       }
     },
@@ -433,6 +514,11 @@
           "description": "message is a human-readable explanation containing details about the transition",
           "type": "string"
         },
+        "observedGeneration": {
+          "description": "observedGeneration represents the .metadata.generation that the condition was set based upon. For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date with respect to the current state of the instance.",
+          "type": "integer",
+          "format": "int64"
+        },
         "reason": {
           "description": "reason is the reason for the condition's last transition.",
           "type": "string"
@@ -532,6 +618,10 @@
           "description": "Controls how the autoscaler computes recommended resources. The resource policy may be used to set constraints on the recommendations for individual containers. If any individual containers need to be excluded from getting the VPA recommendations, then it must be disabled explicitly by setting mode to \"Off\" under containerPolicies. If not specified, the autoscaler computes recommended resources for all containers in the pod, without additional constraints.",
           "$ref": "#/definitions/io.k8s.autoscaling.v1.PodResourcePolicy"
         },
+        "startupBoost": {
+          "description": "startupBoost specifies the startup boost policy for the pod.",
+          "$ref": "#/definitions/io.k8s.autoscaling.v1.StartupBoost"
+        },
         "targetRef": {
           "description": "TargetRef points to the controller managing the set of pods for the autoscaler to control - e.g. Deployment, StatefulSet. VerticalPodAutoscaler can be targeted at controller implementing scale subresource (the pod set is retrieved from the controller's ScaleStatus) or some well known controllers (e.g. for DaemonSet the pod set is read from the controller's spec). If VerticalPodAutoscaler cannot use specified target it will report ConfigUnsupported condition. Note that VerticalPodAutoscaler does not require full implementation of scale subresource - it will not use it to modify the replica count. The only thing retrieved is a label selector matching pods grouped by the target resource.",
           "$ref": "#/definitions/io.k8s.api.autoscaling.v1.CrossVersionObjectReference"
@@ -562,6 +652,11 @@
           },
           "x-kubernetes-patch-merge-key": "type",
           "x-kubernetes-patch-strategy": "merge"
+        },
+        "observedGeneration": {
+          "description": "observedGeneration is the most recent generation observed by this autoscaler.",
+          "type": "integer",
+          "format": "int64"
         },
         "recommendation": {
           "description": "The most recently computed amount of resources recommended by the autoscaler for the controlled pods.",
